--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,19 @@ input {
   width: 100%;
   padding: 10px;
 }
+
+.poke-card {
+  position: relative;
+  height: fit-content;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 22px;
+  font-weight: 700;
+  max-width: 300px;
+  border-radius: 5px;
+  color: #000;
+  text-align: center;
+  padding: 10px;
+  margin: 0 auto;
+  background-color: #fff;
+  border: 1px solid black;
+}
