CSS - .poke-card::before

--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,16 @@ input {
   background-color: #fff;
   border: 1px solid black;
 }
+
+.poke-card::before {
+  content: '';
+  background: radial-gradient(black 33%, transparent 33%);
+  background-size: 3px 3px;
+  border-radius: 5px;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  z-index: -1;
+}
