CSS - .poke-stats div

--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,12 @@ input {
   width: 180px;
   margin: 10px auto;
 }
+
+.poke-stats div {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  padding: 5px;
+  font-size: 18px;
+  font-weight: 500;
+}
